[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fake-useragent>=2.2.0",
    "fastapi>=0.138.0",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.6.9",
]
